ui/css/layout.css
/**************************************************************
   AUTHOR:  Pat Heard (fullahead.org)
   DATE:    2006.03.19
   PURPOSE: Controls the layout of the site and styles
            the menus
 **************************************************************/



/**************************************************************
   #content: Sets the width of the site.  Make changes here
             to convert to a fixed width site.
 **************************************************************/

#content {
  height: 100%;
  min-height: 100%;
  text-align: left;
}

#content,
#width {
  /* max-width hack for IE since it doesn't understand the valid css property */
  width: expression(document.body.clientWidth > 1000 ? "1000px" : "94%");  
  max-width: 1000px;
  margin: 0 auto;
}

#content[id],
#width[id] {
  width: 94%;
  height: auto;
}


/**************************************************************
   #header: Holds the site title and header images
 **************************************************************/

#header {
  position: relative;
  height: 144px;
}

/* Holds the site title and subtitle */
#header #title {
  position: absolute;
  z-index: 3;
  top: 10px;
  left: 130px;
  visibility:hidden;

  padding: 5px;
  text-align: right;
}

#header h1 {
  margin: 0;
  padding: 0;

  font: 700 4em "trebuchet ms", serif;
  letter-spacing: -3px;
  text-transform: lowercase;
  color: #FFF;
}

#header h2 {
  position: absolute;
  top: 10px;
  right: 5px;

  margin: 0;
  padding: 0;

  font: 700 1em "trebuchet ms", serif;
  text-transform: lowercase;
  color: #00F0EC;
}

#header a img,
#header a img:hover {
  border: 0 !important;
}

/* Sets where the header images will go */
#header img.left {
  position: absolute;
  z-index: 1;

  top: 0;
  left: 0;
}

#header img.right {
  position: absolute;
  z-index: 0;

  top: 0;
  right: 32px;
}

#header img.gear {
  position: absolute;
  z-index: 2;

  top: 0;
  left: 0;
}

/**************************************************************
   #mainMenu: The top level site menu
 **************************************************************/

#mainMenu { 
  float: left;
  width: 100%;
  clear: both;
  height:50px;
}

#mainMenu ul {
  margin: 0;
  padding: 0;
}

#mainMenu li {
  display: inline;
  list-style: none;
  margin: 0;
  padding: 0;
  float: left;
  padding-top: 5px;
}

#mainMenu li a {
  padding: 5px 0.5em;

  font: 400 1.3em "trebuchet ms", serif;
  text-decoration: none;
  text-transform: lowercase;
  color: #FFF;
}

#mainMenu li:hover,
#mainMenu li.here {
  border-top: 5px solid #000;
  border-bottom: 0;
}

#mainMenu li:hover a,
#mainMenu li.here a {
  color: #65EBFF;
}

#mainMenu li a.last {
  margin-right: 0;
}

#crumb li.sub:before {
   content:"➤";
}

/**************************************************************
   .docNav: The side bar documentation nav menu
 **************************************************************/

ul.docNav {
  margin: 0;
  padding: 0;
  list-style-position: inside;
  text-indent:-21px;
}

/* Not sure why this is necessary, but it is to override the margin in html.css. */
#toc ul {
  margin: 0;
}

#toc h3 {
  margin-left:7px;
}

/**************************************************************
   #founder: Logos of founding sponsors.
 **************************************************************/
#founders a {
    padding-left:15px;
}

#founders img {
    border:0;
    width:215px;
    height:40px;
}

#founders a:hover img {
    border:0 !important;
}

.hside {
  margin-left:20px;
  width:245px;
}

.hsearch {
  width:650px;
  background: #555 url(../img/gradient.jpg) repeat-x top left;
}

#cloud {
  padding:10px 15px;
}

/**************************************************************
   #homesearch: The home page search form.
 **************************************************************/

#homesearch {
  padding:50px 0;
}

#homesearch fieldset {
  border:0;
  text-align:center;
}

.center {
  margin-left: auto;
  margin-right: auto;
}

/**************************************************************
   .res: Search result.
 **************************************************************/

.res {
  /* background: #555 url(../img/gradient.jpg) repeat-x top left;  */
  background: url(../img/favicon.png) no-repeat 10px 19px;
  padding:15px 15px 15px 35px;
}

.res:hover {
  /* background:#657080; */
  background-color:#907050;
}
 
.res p, .res h2 {
    padding:0;
}

.res ul {
  padding:0;
  margin:0;
}

.res ul li {
  display: inline;
}

.res ul li.date:before, .res ul li.owner:before {
   content:"■ ";
}


/**************************************************************
   .sideMenu: The side bar menu
 **************************************************************/

ul.sideMenu {
  margin: 0;
  padding: 0;
}

.sideMenu li {
  display: inline;
  
  /* Needed since IE fails when you give it list-style: none; */  
  list-style-image: url(foo.gif);
  font: 400 1.3em "trebuchet ms", serif;
}

.sideMenu li a {
  display: block;
  margin: 0.2em 0;
  padding: 3px 5px;    
  
  text-decoration: none;
  color: #FFF;
} 

.sideMenu li a:hover {
  color: #65EBFF;
  background: #5F5F5F;
}

/* Active menu item */
.sideMenu li.here {
  display: block;  
  padding: 5px;
  color: #65EBFF;
  background: #555;
}

/* Submenu of active menu item */
.sideMenu li.here ul {
  margin: 0;
  padding: 0;
}

.sideMenu li.here ul li a {
  padding-left: 35px;
  font: 400 0.55em "trebuchet ms", serif;
  color: #FFF;  
  background: url(../img/bullet.gif) no-repeat 10px 0px;
}

.sideMenu li.here ul li a:hover {
  color: #9FF3FF;
  background: #5F5F5F url(../img/bullet.gif) no-repeat 10px 0px;
}



/**************************************************************
   #page: Holds the main page content.
 **************************************************************/

#page,
#homepage {
  float: left;
  width: 100%;
  clear: both;
  
  padding-bottom: 4em;
}

#homepage {
  width:915px;
}

/**************************************************************
   #footer: The page footer - will stick to the bottom if not
            enough content.
 **************************************************************/

#footer {
  float: left;
  width: 100%;
  clear: both;
  
  margin-top: -3.8em;
  background: #000 url(../img/footer.jpg) repeat-x top left;
}

/* Sets the width of the footer content */
#footer #width {
  position: relative;
  z-index: 3;
  font-size: 0.85em;
  padding-top: 27px;
}



/**************************************************************
   Width classes used by the site columns
 **************************************************************/

.width100 {
  width: 100%;
}

.width75 {
  width: 74%;
}

.width50 {
  width: 49.7%;
}

.width33 {
  width: 32.7%;
}

.width25 {
  width: 24.7%;
}


/**************************************************************
   Alignment classes
 **************************************************************/

.floatLeft {
  float: left;
}

.floatRight {
  float: right;
}

.alignLeft {
  text-align: left;
}

.alignRight {
  text-align: right;
}



/**************************************************************
   Generic display classes
 **************************************************************/

.clear {
  clear: both;
}

.block {
  display: block;
}

.small {
  font-size: 0.8em;
}

.green {
  color: #A1FF45;
}

.red {
  color: #EA1B00;
}

.grey {
  color: #666;
}

.grey a {
  color: #999;
}

.grey a:hover {
  color: #EEE;
}

.gradient {
  margin-bottom: 2em;
  background: #555 url(../img/gradient.jpg) repeat-x bottom left; 
}


/**************************************************************
   Distribution display
 **************************************************************/

.dist .meta dt {
  float:left;
}

.dist .meta dt:after {
  content: ":";
}

.dist .meta dd {
  margin-left: 5em;
}

